--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-chrono": "^2.3.1",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-responsive-carousel": "^3.2.23",
+    "rerousel": "^0.1.9"
   },
   "devDependencies": {
     "@types/node": "^20",
