--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@merc/react-timeline": "^0.1.42",
     "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.13",
+    "firebase": "^10.7.1",
     "framer-motion": "^10.16.4",
     "next": "^13.5.4",
     "react": "^18.2.0",
