--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-animated-cursor": "^2.11.2",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "rerousel": "^0.1.9"
