--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-loading": "^2.0.3",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
-    "rerousel": "^0.1.9"
+    "rerousel": "^0.1.9",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20",
