--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@mui/material": "^5.14.13",
     "firebase": "^10.7.1",
     "framer-motion": "^10.16.4",
+    "html-react-parser": "^5.0.11",
+    "markdown-to-jsx": "^7.3.2",
     "next": "^14.0.4",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-chrono": "^2.3.1",
     "react-dom": "^18.2.0",
     "react-loading": "^2.0.3",
+    "react-markdown": "^9.0.1",
     "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "rerousel": "^0.1.9",
