--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="portfolio-56a2e.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID= "915911901560"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:915911901560:web:7f4cc59a9421b06704488d"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-Z34WDGHD66"
+SITE_URL="http://localhost:3000"
