--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "postbuild": "next-sitemap",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -19,6 +20,7 @@
     "html-react-parser": "^5.0.11",
     "markdown-to-jsx": "^7.3.2",
     "next": "^14.0.4",
+    "next-sitemap": "^4.2.3",
     "react": "^18.2.0",
     "react-animated-cursor": "^2.11.2",
     "react-chrono": "^2.3.1",
