feat: added certifications fixed some bugs

--- a/.env
+++ b/.env
@@ -5,4 +5,13 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="portfolio-56a2e.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID= "915911901560"
 NEXT_PUBLIC_FIREBASE_APP_ID="1:915911901560:web:7f4cc59a9421b06704488d"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-Z34WDGHD66"
+NEXT_PUBLIC_EMAIl_JS_PBK = "zaqSRPg2gODxSa39C"
 SITE_URL="http://localhost:3000"
+
+# NEXT_PUBLIC_FIREBASE_API_KEY="AIzaSyBJNoOv1l6UVV3uQ8nRs75u3mTELos3xXw"
+# NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN="portfolio-prod-92de4.firebaseapp.com"
+# NEXT_PUBLIC_FIREBASE_PROJECT_ID="portfolio-prod-92de4"
+# NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="portfolio-prod-92de4.appspot.com"
+# NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID= "576350359822"
+# NEXT_PUBLIC_FIREBASE_APP_ID="1:576350359822:web:7aae8db20bec481792c75f"
+# NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID="G-HNY52DVJQP"
