--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@merc/react-timeline": "^0.1.42",
     "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.13",
-    "firebase": "^10.7.1",
     "framer-motion": "^10.16.4",
     "html-react-parser": "^5.0.11",
     "markdown-to-jsx": "^7.3.2",
@@ -35,9 +34,14 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios": "^1.6.8",
+    "dotenv": "^16.4.5",
     "env-cmd": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "^14.0.4",
-    "typescript": "^5"
+    "firebase": "^10.11.1",
+    "firebase-admin": "^12.1.0",
+    "typescript": "^5",
+    "xml2js": "^0.6.2"
   }
 }
